styles.css updated - Media Query added to fix character size on small devices.

--- a/styles.css
+++ b/styles.css
@@ -38,3 +38,9 @@ body {
     width: 100%;
     height: 100%;
 }
+
+@media (max-width: 576px) {
+    .character {
+        font-size: 40px;
+    }
+}
